--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -76,9 +76,8 @@ angal.admission.levelisunknown                                                  
 angal.admission.male                                                             = Male
 angal.admission.malnutrition                                                     = Malnutrition
 angal.admission.malnutritioncontrol                                              = Malnutrition control
-angal.admission.maternity                                                        = MATERNITY
-angal.admission.profession                                                       = Profession
 angal.admission.maritalstatus                                                    = Marital Status
+angal.admission.maternity                                                        = MATERNITY
 angal.admission.merge                                                            = Merge
 angal.admission.motherisalive                                                    = Mother is alive  
 angal.admission.motherisdead                                                     = Mother is dead 
@@ -157,6 +156,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = Poor
 angal.admission.positive                                                         = Positive
 angal.admission.present                                                          = present
+angal.admission.profession                                                       = Profession
 angal.admission.progressiveinyear                                                = Progressive in year *
 angal.admission.result                                                           = RESULT
 angal.admission.rich                                                             = Rich
@@ -299,7 +299,7 @@ angal.common.to                                                                 
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = C
 angal.common.uom.centimeter                                                      = cm
-angal.common.uom.kg                                                              = Kg
+angal.common.uom.kg                                                              = kg
 angal.common.uom.meter                                                           = m
 angal.common.uom.mgdl                                                            = mg/dl
 angal.common.uom.milliliter                                                      = ml
@@ -423,6 +423,15 @@ angal.examination.ap.max                                                        
 angal.examination.ap.min                                                         = min
 angal.examination.arterialpressure                                               = Arterial Pressure
 angal.examination.arterialpressureabbr                                           = AP
+angal.examination.auscultation                                                   = Auscultation
+angal.examination.auscultation.bronchial                                         = Bronchial
+angal.examination.auscultation.crackles                                          = Crackles
+angal.examination.auscultation.normal                                            = Normal(Vesicular)
+angal.examination.auscultation.rhonchi                                           = Rhonchi
+angal.examination.auscultation.stridor                                           = Stridor
+angal.examination.auscultation.unknown                                           = Unknown
+angal.examination.auscultation.wheezes                                           = Wheezes
+angal.examination.auscultationabbr                                               = AUSC
 angal.examination.bmi                                                            = BMI
 angal.examination.bmi.normalweight                                               = Normal weight
 angal.examination.bmi.obesityclassiiisevere                                      = Obesity Class III (severe)
@@ -454,20 +463,11 @@ angal.examination.hgt                                                           
 angal.examination.note                                                           = Complain
 angal.examination.pleaseinsertavalidboweldescription                             = Please insert a valid Bowel description
 angal.examination.pleaseinsertavaliddiuresisdescription                          = Please insert a valid Diuresis description
-angal.examination.saturation                                                     = Saturation
-angal.examination.saturationabbr                                                 = O2
 angal.examination.respiratoryrate                                                = Respiratory Rate
 angal.examination.respiratoryrateabbr                                            = RR
 angal.examination.respiratoryrateunit                                            = bpm
-angal.examination.auscultation                                                   = Auscultation
-angal.examination.auscultationabbr                                               = AUSC
-angal.examination.auscultation.unknown                                           = Unknown
-angal.examination.auscultation.normal                                            = Normal(Vesicular)
-angal.examination.auscultation.wheezes                                           = Wheezes
-angal.examination.auscultation.rhonchi                                           = Rhonchi
-angal.examination.auscultation.crackles                                          = Crackles
-angal.examination.auscultation.stridor                                           = Stridor
-angal.examination.auscultation.bronchial                                         = Bronchial
+angal.examination.saturation                                                     = Saturation
+angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperature
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
@@ -1268,25 +1268,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Birth Date
 angal.patient.bloodtype                                                          = Blood type
 angal.patient.bloodtype.unknown                                                  = Unknown
-angal.patient.profession                                                         = Profession
-angal.patient.profession.farming                                                 = Farming
-angal.patient.profession.construction                                            = Construction
-angal.patient.profession.mining                                                  = Mining
-angal.patient.profession.engineering                                             = Engineering
-angal.patient.profession.medicine                                                = Medicine
-angal.patient.profession.foodhospitality                                         = Food/Hospitality
-angal.patient.profession.homemaker                                               = Homemaker
-angal.patient.profession.mechanic                                                = Mechanic
-angal.patient.profession.business                                                = Business
-angal.patient.profession.janitorial                                              = Janitorial Services
-angal.patient.profession.other                                                   = Other
-angal.patient.profession.unknown                                                 = Unknown
-angal.patient.maritalstatus                                                      = Marital Status
-angal.patient.maritalstatusunknown                                               = Unknown
-angal.patient.maritalstatusdivorced                                              = Divorced
-angal.patient.maritalstatuswidowed                                               = Widowed
-angal.patient.maritalstatusmarried                                               = Married
-angal.patient.maritalstatussingle                                                = Single
 angal.patient.city                                                               = City
 angal.patient.confirmage                                                         = Confirm age?
 angal.patient.confirmdeletion                                                    = Confirm deletion
@@ -1314,6 +1295,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = Insert valid age
 angal.patient.loadfile                                                           = Load File
 angal.patient.male                                                               = Male
+angal.patient.maritalstatus                                                      = Marital Status
+angal.patient.maritalstatusdivorced                                              = Divorced
+angal.patient.maritalstatusmarried                                               = Married
+angal.patient.maritalstatussingle                                                = Single
+angal.patient.maritalstatusunknown                                               = Unknown
+angal.patient.maritalstatuswidowed                                               = Widowed
 angal.patient.merge.title                                                        = Merge Patient
 angal.patient.modeage                                                            = Age
 angal.patient.modebdate                                                          = BirthDate
@@ -1334,6 +1321,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = Deleted
 angal.patient.photonotdeleted                                                    = Photo not deleted
 angal.patient.poor                                                               = Poor
+angal.patient.profession                                                         = Profession
+angal.patient.profession.business                                                = Business
+angal.patient.profession.construction                                            = Construction
+angal.patient.profession.engineering                                             = Engineering
+angal.patient.profession.farming                                                 = Farming
+angal.patient.profession.foodhospitality                                         = Food/Hospitality
+angal.patient.profession.homemaker                                               = Homemaker
+angal.patient.profession.janitorial                                              = Janitorial Services
+angal.patient.profession.mechanic                                                = Mechanic
+angal.patient.profession.medicine                                                = Medicine
+angal.patient.profession.mining                                                  = Mining
+angal.patient.profession.other                                                   = Other
+angal.patient.profession.unknown                                                 = Unknown
 angal.patient.quality                                                            = Quality
 angal.patient.rich                                                               = Rich
 angal.patient.searchpatient                                                      = Search Patient
