--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -74,7 +74,6 @@ angal.admission.levelisunknown                                                  
 angal.admission.male                                                             = ذكر
 angal.admission.malnutrition                                                     = سوء التغذية
 angal.admission.malnutritioncontrol                                              = مكافحة سوء التغذية
-angal.admission.profession                                                       = المهنة
 angal.admission.maritalstatus                                                    = الحالة المدنية
 angal.admission.maternity                                                        = MATERNITY
 angal.admission.merge                                                            = دمج
@@ -155,6 +154,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = فقير
 angal.admission.positive                                                         = إيجابي
 angal.admission.present                                                          = تقديم
+angal.admission.profession                                                       = المهنة
 angal.admission.progressiveinyear                                                = التقدمي في العام *
 angal.admission.result                                                           = النتيجة
 angal.admission.rich                                                             = غني
@@ -296,7 +296,7 @@ angal.common.to                                                                 
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
-angal.common.uom.kg                                                              = Kg
+angal.common.uom.kg                                                              = kg
 angal.common.uom.meter                                                           = m
 angal.common.uom.mgdl                                                            = mg/dl
 angal.common.uom.milliliter                                                      = ml
@@ -413,6 +413,15 @@ angal.examination.ap.max                                                        
 angal.examination.ap.min                                                         = اقل قيمة
 angal.examination.arterialpressure                                               = الضغط الشرياني
 angal.examination.arterialpressureabbr                                           = AP
+angal.examination.auscultation                                                   = التسمع
+angal.examination.auscultation.bronchial                                         = برونكيال
+angal.examination.auscultation.crackles                                          = كراكر
+angal.examination.auscultation.normal                                            = طبيعي
+angal.examination.auscultation.rhonchi                                           = غطائط
+angal.examination.auscultation.stridor                                           = صرير
+angal.examination.auscultation.unknown                                           = غير معروف
+angal.examination.auscultation.wheezes                                           = أزيز
+angal.examination.auscultationabbr                                               = AUSC
 angal.examination.bmi                                                            = BMI
 angal.examination.bmi.normalweight                                               = الوزن الطبيعي
 angal.examination.bmi.obesityclassiiisevere                                      = بدانة صنف ثالث ‫(‬مفرطة‫)‬
@@ -444,20 +453,11 @@ angal.examination.hgt                                                           
 angal.examination.note                                                           = شكوى
 angal.examination.pleaseinsertavalidboweldescription                             = الرجاء إدخال وصف صالح للأمعاء
 angal.examination.pleaseinsertavaliddiuresisdescription                          = يرجى إدخال وصف إدرار البول صالح
-angal.examination.saturation                                                     = اشباع
-angal.examination.saturationabbr                                                 = O2
 angal.examination.respiratoryrate                                                = وتيرة التنفس
 angal.examination.respiratoryrateabbr                                            = RR
 angal.examination.respiratoryrateunit                                            = bpm
-angal.examination.auscultation                                                   = التسمع
-angal.examination.auscultationabbr                                               = AUSC
-angal.examination.auscultation.unknown                                           = غير معروف
-angal.examination.auscultation.normal                                            = طبيعي
-angal.examination.auscultation.wheezes                                           = أزيز
-angal.examination.auscultation.rhonchi                                           = غطائط
-angal.examination.auscultation.crackles                                          = كراكر
-angal.examination.auscultation.stridor                                           = صرير
-angal.examination.auscultation.bronchial                                         = برونكيال
+angal.examination.saturation                                                     = اشباع
+angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = حرارة
 angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = احفظ اختبار المريض
@@ -1254,25 +1254,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = تاريخ الميلاد
 angal.patient.bloodtype                                                          = فصيلة الدم
 angal.patient.bloodtype.unknown                                                  = غير معروف
-angal.patient.profession                                                         = المهنة
-angal.patient.profession.farming                                                 = زراعة
-angal.patient.profession.construction                                            = بناء
-angal.patient.profession.mining                                                  = تعدين
-angal.patient.profession.engineering                                             = هندسة
-angal.patient.profession.medicine                                                = طب
-angal.patient.profession.foodhospitality                                         = الغذاء والضيافة
-angal.patient.profession.homemaker                                               = ربة منزل
-angal.patient.profession.mechanic                                                = ميكانيكي
-angal.patient.profession.business                                                = أعمال
-angal.patient.profession.janitorial                                              = خدمات تنظيف
-angal.patient.profession.other                                                   = مهنة أخرى
-angal.patient.profession.unknown                                                 = غير معروف
-angal.patient.maritalstatus                                                      = الحالة المدنية
-angal.patient.maritalstatusunknown                                               = غير معروف
-angal.patient.maritalstatusdivorced                                              = مطلق 
-angal.patient.maritalstatuswidowed                                               = مترمل 
-angal.patient.maritalstatusmarried                                               = متزوج
-angal.patient.maritalstatussingle                                                = أعزب
 angal.patient.city                                                               = المدينة
 angal.patient.confirmage                                                         = تأكيد العمر؟
 angal.patient.confirmdeletion                                                    = تأكيد الحذف
@@ -1300,6 +1281,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = ادرج عمر صالح
 angal.patient.loadfile                                                           = Load File
 angal.patient.male                                                               = ذكر
+angal.patient.maritalstatus                                                      = الحالة المدنية
+angal.patient.maritalstatusdivorced                                              = مطلق 
+angal.patient.maritalstatusmarried                                               = متزوج
+angal.patient.maritalstatussingle                                                = أعزب
+angal.patient.maritalstatusunknown                                               = غير معروف
+angal.patient.maritalstatuswidowed                                               = مترمل 
 angal.patient.merge.title                                                        = دمج المريض
 angal.patient.modeage                                                            = العمر
 angal.patient.modebdate                                                          = تاريخ الميلاد
@@ -1320,6 +1307,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = محذوفة
 angal.patient.photonotdeleted                                                    = الصورة غير محذوفة
 angal.patient.poor                                                               = فقير
+angal.patient.profession                                                         = المهنة
+angal.patient.profession.business                                                = أعمال
+angal.patient.profession.construction                                            = بناء
+angal.patient.profession.engineering                                             = هندسة
+angal.patient.profession.farming                                                 = زراعة
+angal.patient.profession.foodhospitality                                         = الغذاء والضيافة
+angal.patient.profession.homemaker                                               = ربة منزل
+angal.patient.profession.janitorial                                              = خدمات تنظيف
+angal.patient.profession.mechanic                                                = ميكانيكي
+angal.patient.profession.medicine                                                = طب
+angal.patient.profession.mining                                                  = تعدين
+angal.patient.profession.other                                                   = مهنة أخرى
+angal.patient.profession.unknown                                                 = غير معروف
 angal.patient.quality                                                            = جودة
 angal.patient.rich                                                               = غني
 angal.patient.searchpatient                                                      = بحث المريض
