--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -194,11 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = sera supprimè et son/sienne histoire transferè au Patient
 angal.admission.withthisoperationthepatient                                      = avec cette operation le Patient
 angal.admission.youareeditinganoldadmission                                      = Tu vais modifié un ancien hospitalisation
-angal.admission.check.operationdate                                               = Vérifier les dates des opérations
-angal.admission.invalidoperationdate                                             = Date d'opération non valide:
-angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
-angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
-angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation
 angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation 
 angal.admtype.codemaxchars                                                       = Code (max 10 caractère)
 angal.admtype.codetoolongmaxchars                                                = Code trop long (max 10 caractère)
@@ -302,7 +297,7 @@ angal.common.to                                                                 
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
-angal.common.uom.kg                                                              = Kg
+angal.common.uom.kg                                                              = kg
 angal.common.uom.meter                                                           = m
 angal.common.uom.mgdl                                                            = mg/dl
 angal.common.uom.milliliter                                                      = ml
