--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -297,7 +297,7 @@ angal.common.to                                                                 
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
 angal.common.uom.centimeter                                                      = cm
-angal.common.uom.kg                                                              = Kg
+angal.common.uom.kg                                                              = kg
 angal.common.uom.meter                                                           = m
 angal.common.uom.mgdl                                                            = mg/dl
 angal.common.uom.milliliter                                                      = ml
