--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = 未知
 angal.admission.cannotmergeadmittedpatients                                      = 不能合并住院病人
 angal.admission.cannotmergewithpendingbills                                      = 无法与挂起的票据合并
+angal.admission.check.operationdate                                              = Please check the operations dates
 angal.admission.city                                                             = 城市
 angal.admission.continue                                                         = 继续?
 angal.admission.controldaten2controldaten1notfound                               = 控制日期 n.2: 控制日期 n.1 找不到
@@ -69,6 +70,7 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Insurance
 angal.admission.intheselecteddatepatientwasadmittedagain                         = in the selected date patient was admitted again, please insert a valid discharge date
 angal.admission.invalidadmissionperiod                                           = invalid admission period:
+angal.admission.invalidoperationdate                                             = Invalid operation date:
 angal.admission.levelis                                                          = Level is
 angal.admission.levelisunknown                                                   = Level is unknown
 angal.admission.male                                                             = Male
@@ -167,6 +169,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Tax Number ID
 angal.admission.telephone                                                        = Telephone
 angal.admission.theadmissionbetween                                              = the admission between  \n
+angal.admission.theoperationdatebetween                                          = the operation date must be between
+angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admission.thepatientwasnotyetbornatselecteddate                            = The patient was not yet born at selected date!!!
 angal.admission.therapy                                                          = Therapy
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = There is more than one pending bill for this patient, continue?
@@ -190,10 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
 angal.admission.youareeditinganoldadmission                                      = You are editing an old admission
-angal.admission.check.operationdate                                               = Please check the operations dates
-angal.admission.invalidoperationdate                                             = Invalid operation date:
-angal.admission.theoperationdatebetween                                          = the operation date must be between
-angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admtype.admissiontypebrowsing                                              = Admission type browsing
 angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.codetoolongmaxchars                                                = Code too long (max 10 chars)
@@ -292,6 +292,7 @@ angal.common.save                                                               
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
 angal.common.to                                                                  = To
+angal.common.uom.kg                                                              = kg
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
@@ -771,7 +772,7 @@ angal.medicalstockward.outcome.destination                                      
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
 angal.medicalstockward.patient                                                   = Patient
-angal.medicalstockward.pieces                                                    =  pieces
+angal.medicalstockward.pieces                                                    = pieces
 angal.medicalstockward.pleaseselectanoutcomesmovementfirst                       = Please select an Outcomes movement first
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
@@ -1050,7 +1051,7 @@ angal.newbill.list                                                              
 angal.newbill.medical                                                            = Medical
 angal.newbill.newdescription                                                     = new description
 angal.newbill.nopricelistselected.part1                                          = No PriceList Selected!
-angal.newbill.nopricelistselected.part2                                          =  will be used
+angal.newbill.nopricelistselected.part2                                          = will be used
 angal.newbill.operation                                                          = Operation
 angal.newbill.other                                                              = Other
 angal.newbill.paid                                                               = Paid
@@ -1124,8 +1125,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = New OPD registration
 angal.opd.newpatient                                                             = <enter a new patient>
 angal.opd.nextkin                                                                = Next Kin
+angal.opd.nextvisitdate                                                          = Next visit date
 angal.opd.nonote                                                                 = <none>
 angal.opd.noteandsymptom                                                         = Note & Symptom
+angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.opd.notspecified                                                           = not specified
 angal.opd.on                                                                     = on
 angal.opd.opdnumber                                                              = OPD No.
@@ -1153,8 +1156,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sex
 angal.opd.sexm                                                                   = SEX
 angal.opd.visitdate                                                              = Visit Date
-angal.opd.nextvisitdate                                                          = Next visit date
-angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.operation.allm                                                             = ALL
 angal.operation.codetoolongmaxchars                                              = Code too long (max 10 chars)
 angal.operation.deleteoperation                                                  = Delete operation
