Added DIURESIS_MIN and DIURESIS_MAX parameters and separated from
diuresis type (DEFAULT_DIURESIS_INIT = 100)

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -444,6 +444,7 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = فسيولوجي
 angal.examination.diuresis.pyuria                                                = بيلة قيحية
 angal.examination.diuresis.stranguria                                            = تقطير
+angal.examination.diuresisvolume24h                                              = إدرار البول Vol 24H
 angal.examination.heartrate                                                      = نبض القلب
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = ارتفاع
