--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -426,7 +426,7 @@ angal.examination.arterialpressureabbr                                          
 angal.examination.auscultation                                                   = Auscultation
 angal.examination.auscultation.bronchial                                         = Bronchial
 angal.examination.auscultation.crackles                                          = Crackles
-angal.examination.auscultation.normal                                            = Normal(Vesicular)
+angal.examination.auscultation.normal                                            = Normal (Vescicular)
 angal.examination.auscultation.rhonchi                                           = Rhonchi
 angal.examination.auscultation.stridor                                           = Stridor
 angal.examination.auscultation.unknown                                           = Unknown
@@ -454,6 +454,7 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Physiological
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Height
