--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -438,6 +438,7 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Fisiológica
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Estranguria
+angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
 angal.examination.heartrate                                                      = Pulsaciones
 angal.examination.heartrateabbr                                                  = P
 angal.examination.height                                                         = Altura
