--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -433,11 +433,12 @@ angal.examination.diuresis                                                      
 angal.examination.diuresis.anuria                                                = Anurie
 angal.examination.diuresis.frequent                                              = Pollakiurie
 angal.examination.diuresis.hematuria                                             = Hématurie
-angal.examination.diuresis.nocturia                                              = Nocturie
+angal.examination.diuresis.nocturia                                              = Nycturie
 angal.examination.diuresis.oliguria                                              = Oligurie
 angal.examination.diuresis.physiological                                         = Physiologique
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Strangurie
+angal.examination.diuresisvolume24h                                              = Diurèse Vol 24H
 angal.examination.heartrate                                                      = Fréquence Cardiaque
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Hanteur
