--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -438,11 +438,12 @@ angal.examination.diuresis                                                      
 angal.examination.diuresis.anuria                                                = Anuria
 angal.examination.diuresis.frequent                                              = Pollachiuria
 angal.examination.diuresis.hematuria                                             = Ematuria
-angal.examination.diuresis.nocturia                                              = Nocturia
+angal.examination.diuresis.nocturia                                              = Nicturia
 angal.examination.diuresis.oliguria                                              = Oliguria
 angal.examination.diuresis.physiological                                         = Fisiologica
 angal.examination.diuresis.pyuria                                                = Piuria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diuresi Vol 24H
 angal.examination.heartrate                                                      = Frequenza Cardiaca
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Altezza
