--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -435,6 +435,7 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Fisiológica
 angal.examination.diuresis.pyuria                                                = Piúria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diurese Vol 24H
 angal.examination.heartrate                                                      = Ritmo Cardíaco
 angal.examination.heartrateabbr                                                  = RC
 angal.examination.height                                                         = Altura
