--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -435,6 +435,7 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Kisaikolojia
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
 angal.examination.heartrate                                                      = Kiwango cha Moyo
 angal.examination.heartrateabbr                                                  = KM
 angal.examination.height                                                         = Urefu
