--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -435,6 +435,7 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Physiologisch
 angal.examination.diuresis.pyuria                                                = Pyurie
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Größe
