Refactored Ausculation field and defaults values
Addded validation check

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -462,6 +462,7 @@ angal.examination.heightabbr                                                    
 angal.examination.hemoglucosetest                                                = Hemo Glucose Test
 angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
+angal.examination.pleaseinsertavalidauscultationdescription                      = Please insert a valid Auscultation description
 angal.examination.pleaseinsertavalidboweldescription                             = Please insert a valid Bowel description
 angal.examination.pleaseinsertavaliddiuresisdescription                          = Please insert a valid Diuresis description
 angal.examination.respiratoryrate                                                = Respiratory Rate
