--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -451,6 +451,7 @@ angal.examination.heightabbr                                                    
 angal.examination.hemoglucosetest                                                = Hemo Glucose Test
 angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Note
+angal.examination.pleaseinsertavalidauscultationdescription                      = Prego inserire una descrizione di Auscultazione valida
 angal.examination.pleaseinsertavalidboweldescription                             = Prego inserire una descrizione di Alvo valida
 angal.examination.pleaseinsertavaliddiuresisdescription                          = Prego inserire una descrizione di Diuresi valida
 angal.examination.saturation                                                     = Saturazione
