--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -645,6 +645,7 @@ angal.medicalstock.chooseavalidmovementdate                                     
 angal.medicalstock.chooseavalidpreparationdate                                   = Choose a valid preparation date
 angal.medicalstock.chooseaward                                                   = Choose a ward
 angal.medicalstock.costm                                                         = COST
+angal.medicalstock.clickdrugs													 = Double click to show lot details
 angal.medicalstock.currentquantitylyinginstock                                   = Current quantity lying in stock
 angal.medicalstock.deleteall                                                     = Delete all!
 angal.medicalstock.discharge                                                     = Discharge
@@ -803,6 +804,8 @@ angal.medicalstockward.female                                                   
 angal.medicalstockward.filter                                                    = Filter
 angal.medicalstockward.from                                                      = From
 angal.medicalstockward.lotnumberabb                              				 = Lot No.
+angal.medicalstockward.chooselot                             				     = choose Lot
+angal.medicalstockward.rectifyerror                            				     = Not enough quantity in stock
 angal.medicalstockward.incomings                                                 = Incomings
 angal.medicalstockward.insertavalidweight                                        = Insert a valid weight
 angal.medicalstockward.insertvalidage                                            = Insert a valid age
