added control in rectify  if lot is not selected

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -639,13 +639,14 @@ angal.medicalstock.chooseamedical                                               
 angal.medicalstock.chooseanalreadyexistentlot                                    = Choose an already existent lot
 angal.medicalstock.chooseapharmaceutical                                         = Choose a pharmaceutical
 angal.medicalstock.chooseasupplier                                               = Please select a Supplier
+angal.medicalstockward.chooselot                             				     = Choose a Lot
 angal.medicalstock.chooseatype                                                   = Choose a type
 angal.medicalstock.chooseavalidduedate                                           = Choose a valid due date
 angal.medicalstock.chooseavalidmovementdate                                      = Choose a valid movement date
 angal.medicalstock.chooseavalidpreparationdate                                   = Choose a valid preparation date
 angal.medicalstock.chooseaward                                                   = Choose a ward
-angal.medicalstock.costm                                                         = COST
 angal.medicalstock.clickdrugs													 = Double click to show lot details
+angal.medicalstock.costm                                                         = COST
 angal.medicalstock.currentquantitylyinginstock                                   = Current quantity lying in stock
 angal.medicalstock.deleteall                                                     = Delete all!
 angal.medicalstock.discharge                                                     = Discharge
@@ -804,7 +805,6 @@ angal.medicalstockward.female                                                   
 angal.medicalstockward.filter                                                    = Filter
 angal.medicalstockward.from                                                      = From
 angal.medicalstockward.lotnumberabb                              				 = Lot No.
-angal.medicalstockward.chooselot                             				     = choose Lot
 angal.medicalstockward.rectifyerror                            				     = Not enough quantity in stock
 angal.medicalstockward.incomings                                                 = Incomings
 angal.medicalstockward.insertavalidweight                                        = Insert a valid weight
