fixed bug implementation rectify

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -826,6 +826,22 @@ angal.medicalstockward.rectify.pleaseselectadrug                                
 angal.medicalstockward.rectify.pleasespecifythereason                            = Please specify the reason
 angal.medicalstockward.rectify.reason                                            = Reason
 angal.medicalstockward.rectify.title                                             = Rectify
+angal.medicalstockward.rectify.expiringdateinthepastnotallowed            		 = Expiring date in the past not allowed
+angal.medicalstockward.rectify.expirydatebeforepreparationdate           		 = Expiring date before Preparation date not allowed
+angal.medicalstockward.rectify.futuredatenotallowed                              = Future date not allowed
+angal.medicalstockward.rectify.lotid                                    		 = Lot id
+angal.medicalstockward.rectify.lotinformations                       		     = Lot informations
+angal.medicalstockward.rectify.qty                 		                         = Qty
+angal.medicalstockward.rectify.referencenumber 		                             = Reference No.
+angal.medicalstockward.rectify.selectalot 		                                 = Select a lot
+angal.medicalstockward.rectify.lotnumberabb                                 	 = Lot No.
+angal.medicalstockward.rectify.preparationdate                              	 = Lot preparation
+angal.medicalstockward.rectify.expiringdate                                      = Expiring
+angal.medicalstockward.rectify.expirydatebeforepreparationdate                   = Expiring date before Preparation date not allowed
+angal.medicalstockward.rectify.expirydatebeforepreparationdate                   = Expiring date before Preparation date not allowed
+angal.medicalstockward.rectify.totalcost                                         = Total cost
+angal.medicalstockward.rectify.unitcost                                          = Unit cost
+angal.medicalstockward.rectify.pleaseinsertavalidvalue                           = Insert a valid value
 angal.medicalstockward.report                                                    = Report
 angal.medicalstockward.reset                                                     = Reset
 angal.medicalstockward.selectaward                                               = <select a ward>
