added new button

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -640,6 +640,8 @@ angal.medicalstock.chooseanalreadyexistentlot                                   
 angal.medicalstock.chooseapharmaceutical                                         = Choose a pharmaceutical
 angal.medicalstock.chooseasupplier                                               = Please select a Supplier
 angal.medicalstockward.chooselot                             				     = Choose a Lot
+angal.medicalstockward.newlot                             				     	 = New a Lot
+angal.medicalstockward.invalidquantitypleasetryagain                                      = Invalid Quantity!\nPlease try again.
 angal.medicalstock.chooseatype                                                   = Choose a type
 angal.medicalstock.chooseavalidduedate                                           = Choose a valid due date
 angal.medicalstock.chooseavalidmovementdate                                      = Choose a valid movement date
@@ -835,6 +837,7 @@ angal.medicalstockward.rectify.qty                 		                         = 
 angal.medicalstockward.rectify.referencenumber 		                             = Reference No.
 angal.medicalstockward.rectify.selectalot 		                                 = Select a lot
 angal.medicalstockward.rectify.lotnumberabb                                 	 = Lot No.
+angal.medicalstockward.rectify.lotnumberSelect                                 	 = Please insert a lot number
 angal.medicalstockward.rectify.preparationdate                              	 = Lot preparation
 angal.medicalstockward.rectify.expiringdate                                      = Expiring
 angal.medicalstockward.rectify.expirydatebeforepreparationdate                   = Expiring date before Preparation date not allowed
