OP-96 - print button inside labeditextended (#94)
* OP-96 + print button inside labeditextended
* add Print button inside LabEdit (in addition to LabEditExtended)

--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -489,6 +489,7 @@ angal.lab.pleaseselectapatient                                                  
 angal.lab.positive                                                               = Positivo
 angal.lab.printreport                                                            = Imprimir relatório
 angal.lab.printtable                                                             = Imprimir tabela
+angal.lab.print                                                                  = Imprimir
 angal.lab.reactive                                                               = Reactivo
 angal.lab.registationdate                                                        = Data de registro
 angal.lab.result                                                                 = Resultado
